--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files":[
+            "app/Library/helper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
