--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,12 @@
         "classmap": [
             "database/seeds",
             "database/factories",
-            "app/Library/Ucpaas.php"
+            "app/Library/Ucpaas.php",
+            "app/Library/helper.php"
         ],
         "psr-4": {
             "App\\": "app/"
-        },
-        "files":[
-            "app/Library/helper.php"
-        ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
