--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
             "database/seeds",
             "database/factories",
             "app/Library/Ucpaas.php",
-            "app/Library/helper.php"
+            "app/Library/helper.php",
+            "app/Library/payment.php"
         ],
         "psr-4": {
             "App\\": "app/"
